--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draggable": "^4.4.5",
     "use-places-autocomplete": "^1.11.0"
   },
   "devDependencies": {
